# dotmix

./: .gitignore  .pre-commit-config.yaml  .release-it.json  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
cli/: __init__.py  cli.py  colorscheme.py  completion.py  config.py  template.py  utils.py
docs/: api.rst  conf.py  index.rst
docs/_templates/autoapi/: index.rst
dotmix/: colorscheme.py  config.py  fileset.py  runner.py  utils.py
dotmix/cli/: cli.py
dttr/: __init__.py  abstractcfg.py  appearance.py  basiccfg.py  cli.py  colors.py  colorscheme.py  colorutils.py  config.py  data.py  fileset.py  runner.py  template.py  theme.py  typography.py  utils.py
dttr/colorscheme/: __init__.py  colorscheme.py  colp.py  models.py  utils.py
dttr/utils/: __init__.py  abstractcfg.py  basiccfg.py
tests/: test_dotmix.py  test_dttr.py
tests/mocks/appearances/: base.toml  extend.toml
tests/mocks/colorschemes/: base.toml  extend.toml
tests/mocks/filesets/base/: settings.toml
tests/mocks/filesets/base/other/: .plain
tests/mocks/filesets/base/some/: .template
tests/mocks/filesets/extend/: settings.toml
tests/mocks/filesets/extend/other/: .plain
tests/mocks/typographies/: base.toml  extend.toml
